--- a/reto3/src/main/resources/application.properties
+++ b/reto3/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
 
-#enabling the H2 console
-spring.h2.console.enabled=true
