--- a/reto3/src/main/resources/application.properties
+++ b/reto3/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 
