--- a/reto3/src/main/resources/application.properties
+++ b/reto3/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
-
+server.port=8080
